Fixed typo in dictionaries

--- a/nbplain/03_dictionaries.ipynb
+++ b/nbplain/03_dictionaries.ipynb
@@ -16,7 +16,7 @@
     "- **Exercises:** 10 min\n",
     "\n",
     "**Questions**\n",
-    "- What is a dictioanry?\n",
+    "- What is a dictionary?\n",
     "- Why wouldn't I just use a list?\n",
     "- How do I access the items in a dictionary?\n",
     "- How do I modify or add items to a dictionary?\n",
