Removed incorrect reference to code 'below'

--- a/nbplain/05_objects.ipynb
+++ b/nbplain/05_objects.ipynb
@@ -314,7 +314,7 @@
    "source": [
     "## Exercise: 1\n",
     "\n",
-    "Edit the below `GuessGame` example so that it records how many unsuccessful guesses have been performed. Add a function called `nGuesses()` that returns the number of unsuccessful guesses. Once you have made the changes, check your class by creating an object of your class and using it to make some successful and unsuccessful guesses.\n",
+    "Edit the `GuessGame` example so that it records how many unsuccessful guesses have been performed. Add a function called `nGuesses()` that returns the number of unsuccessful guesses. Once you have made the changes, check your class by creating an object of your class and using it to make some successful and unsuccessful guesses.\n",
     "\n",
     "[Solution]()"
    ]
