Added link to lesson library on notebooks

--- a/nbplain/00_schedule.ipynb
+++ b/nbplain/00_schedule.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "## Setup:\n",
     "\n",
-    "Log on to [notebooks.azure.com](https://notebooks.azure.com) and clone the lesson library ***add link.***"
+    "Log on to [notebooks.azure.com](https://notebooks.azure.com), clone the [lesson library](https://notebooks.azure.com/jgrant/projects/funcs-classes-python) and click `Run on Free ...` to start the lesson."
    ]
   }
  ],
