--- a/nbplain/03_dictionaries.ipynb
+++ b/nbplain/03_dictionaries.ipynb
@@ -17,7 +17,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "a = { \"cat\" : \"mieow\", \"dog\" : \"woof\", \"horse\" : \"neigh\"}",
@@ -26,19 +26,19 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "a",
       "execution_count": 2,
       "outputs": [
         {
+          "output_type": "execute_result",
+          "execution_count": 2,
           "data": {
             "text/plain": "{'cat': 'mieow', 'dog': 'woof', 'horse': 'neigh'}"
           },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
+          "metadata": {}
         }
       ]
     },
@@ -49,19 +49,19 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "a[\"cat\"]",
       "execution_count": 3,
       "outputs": [
         {
+          "output_type": "execute_result",
+          "execution_count": 3,
           "data": {
             "text/plain": "'mieow'"
           },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
+          "metadata": {}
         }
       ]
     },
@@ -72,20 +72,20 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "a['fish']",
       "execution_count": 4,
       "outputs": [
         {
+          "output_type": "error",
           "ename": "KeyError",
           "evalue": "'fish'",
-          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-afabe6ae7883>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fish'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-4-afabe6ae7883>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fish'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m: 'fish'"
           ]
         }
@@ -98,7 +98,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "a[\"fish\"] = \"bubble\"",
@@ -107,19 +107,19 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "a",
       "execution_count": 6,
       "outputs": [
         {
-          "data": {
-            "text/plain": "{'cat': 'mieow', 'dog': 'woof', 'horse': 'neigh', 'fish': 'bubble'}"
-          },
+          "output_type": "execute_result",
           "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
+          "data": {
+            "text/plain": "{'cat': 'mieow', 'dog': 'woof', 'fish': 'bubble', 'horse': 'neigh'}"
+          },
+          "metadata": {}
         }
       ]
     },
@@ -130,52 +130,52 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "help(a.values)",
       "execution_count": 7,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
-          "text": "Help on built-in function values:\n\nvalues(...) method of builtins.dict instance\n    D.values() -> an object providing a view on D's values\n\n"
+          "text": "Help on built-in function values:\n\nvalues(...) method of builtins.dict instance\n    D.values() -> an object providing a view on D's values\n\n",
+          "name": "stdout"
         }
       ]
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "a.keys()",
       "execution_count": 8,
       "outputs": [
         {
-          "data": {
-            "text/plain": "dict_keys(['cat', 'dog', 'horse', 'fish'])"
-          },
+          "output_type": "execute_result",
           "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
+          "data": {
+            "text/plain": "dict_keys(['cat', 'fish', 'horse', 'dog'])"
+          },
+          "metadata": {}
         }
       ]
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "a.values()",
       "execution_count": 9,
       "outputs": [
         {
-          "data": {
-            "text/plain": "dict_values(['mieow', 'woof', 'neigh', 'bubble'])"
-          },
+          "output_type": "execute_result",
           "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
+          "data": {
+            "text/plain": "dict_values(['mieow', 'bubble', 'neigh', 'woof'])"
+          },
+          "metadata": {}
         }
       ]
     },
@@ -186,16 +186,16 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "for key in a.keys():\n    print(\"A %s goes %s\" % (key, a[key]))",
       "execution_count": 10,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
-          "text": "A cat goes mieow\nA dog goes woof\nA horse goes neigh\nA fish goes bubble\n"
+          "text": "A cat goes mieow\nA fish goes bubble\nA horse goes neigh\nA dog goes woof\n",
+          "name": "stdout"
         }
       ]
     },
@@ -206,7 +206,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "b = { \"a\" : [\"aardvark\", \"anteater\", \"antelope\"], \"b\" : [\"badger\", \"beetle\"], 26.5: a}",
@@ -220,19 +220,19 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "b[26.5][\"fish\"]",
       "execution_count": 12,
       "outputs": [
         {
+          "output_type": "execute_result",
+          "execution_count": 12,
           "data": {
             "text/plain": "'bubble'"
           },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
+          "metadata": {}
         }
       ]
     },
@@ -243,7 +243,7 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "letter_to_morse = {'a':'.-', 'b':'-...', 'c':'-.-.', 'd':'-..', 'e':'.', 'f':'..-.',\n                   'g':'--.', 'h':'....', 'i':'..', 'j':'.---', 'k':'-.-', 'l':'.-..', 'm':'--',\n                   'n':'-.', 'o':'---', 'p':'.--.', 'q':'--.-', 'r':'.-.', 's':'...', 't':'-',\n                   'u':'..-', 'v':'...-', 'w':'.--', 'x':'-..-', 'y':'-.--', 'z':'--..',\n                   '0':'-----', '1':'.----', '2':'..---', '3':'...--', '4':'....-',\n                   '5':'.....', '6':'-....', '7':'--...', '8':'---..', '9':'----.',\n                   ' ':'/' }",
@@ -262,16 +262,16 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "print(letter_to_morse[\"s\"], letter_to_morse[\"o\"], letter_to_morse[\"s\"])",
       "execution_count": 14,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
-          "text": "... --- ...\n"
+          "text": "... --- ...\n",
+          "name": "stdout"
         }
       ]
     },
@@ -283,7 +283,21 @@
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "## Exercise: 2\n\nHere is a string that contains a message that must be converted to morse code. Write a loop that converts each letter into the morse code equivalent, and stores it into a list. Print the list out to see the full morse code message that must be sent. Note that you will need to use the `.lower()` function to get the lower case of capital letters.\n\n```python\nmessage = \"SOS We have hit an iceberg and need help quickly\"\n```\n\n[Solution]()"
+      "source": "## Exercise+: 2\n\nHere is a string that contains a message that must be converted to morse code. Write a loop that converts each letter into the morse code equivalent, and stores it into a list. Print the list out to see the full morse code message that must be sent. Note that you will need to use the `.lower()` function to get the lower case of capital letters."
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "message = \"SOS We have hit an iceberg and need help quickly\"",
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "[Solution]()\n\n:Exercise+"
     },
     {
       "metadata": {},
@@ -292,25 +306,25 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "message = \"SOS We have hit an iceberg and need help quickly\"",
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "morse = []\nfor letter in message:\n    morse.append( letter_to_morse[letter.lower()] )\nprint(morse)",
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
-          "text": "['...', '---', '...', '/', '.--', '.', '/', '....', '.-', '...-', '.', '/', '....', '..', '-', '/', '.-', '-.', '/', '..', '-.-.', '.', '-...', '.', '.-.', '--.', '/', '.-', '-.', '-..', '/', '-.', '.', '.', '-..', '/', '....', '.', '.-..', '.--.', '/', '--.-', '..-', '..', '-.-.', '-.-', '.-..', '-.--']\n"
+          "text": "['...', '---', '...', '/', '.--', '.', '/', '....', '.-', '...-', '.', '/', '....', '..', '-', '/', '.-', '-.', '/', '..', '-.-.', '.', '-...', '.', '.-.', '--.', '/', '.-', '-.', '-..', '/', '-.', '.', '.', '-..', '/', '....', '.', '.-..', '.--.', '/', '--.-', '..-', '..', '-.-.', '-.-', '.-..', '-.--']\n",
+          "name": "stdout"
         }
       ]
     },
@@ -326,11 +340,11 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "morse_to_letter = {}\nfor letter in letter_to_morse.keys():\n    morse_to_letter[ letter_to_morse[letter] ] = letter",
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -350,16 +364,16 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "english = []\nfor code in morse:\n    english.append( morse_to_letter[code] )\nprint(\"\".join(english))",
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
-          "text": "sos we have hit an iceberg and need help quickly\n"
+          "text": "sos we have hit an iceberg and need help quickly\n",
+          "name": "stdout"
         }
       ]
     },
@@ -386,9 +400,9 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "name": "python",
-      "file_extension": ".py",
-      "version": "3.5.4",
       "pygments_lexer": "ipython3",
+      "version": "3.5.4",
+      "file_extension": ".py",
       "codemirror_mode": {
         "version": 3,
         "name": "ipython"
